--- a/SpringBootSecurity/src/main/resources/templates/sample/member.html
+++ b/SpringBootSecurity/src/main/resources/templates/sample/member.html
@@ -17,13 +17,19 @@
 </div>
 
 Authenticated username:
+<!--<div sec:authentication="principal.username"></div>--> <!-- oauth가 아닐땐 username으로 받아야하고 oauth면 name으로 principal이 받아온다.. -->
+<!--<div sec:authentication="principal.name"></div>-->
+<!--customoauth2userdetailsservice를 만들어서 DefaultOauth2User를 사용하지 않고 새롭게 커스톰한 Oauth2UserDto를 만들었기때문에 이제 다시 username을 써도 된다 그리고 이젠 eamil이 잘나온다-->
 <div sec:authentication="principal.username"></div>
 
 Authenticated user roles
 <div sec:authentication="principal.authorities"></div>
 
-<div sec:authentication="principal.name"></div>
-<div sec:authentication="principal.fromSocial"></div>
+<!--<div sec:authentication="principal.attribute('sub')"></div>-->
+<!--<div sec:authentication="principal.attribute('email')"></div>-->
+
+<!--<div sec:authentication="principal.name"></div>-->
+<!--<div sec:authentication="principal.fromSocial"></div>-->
 
 </body>
 </html>
